--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         <label>Cup Wall Thickness Increase Rate</label>
         <input type="number" step="0.01" id="increaseRate" value="1.1" />
 
+        <label>Redraw Reduction (%)</label>
+        <input type="number" step="0.1" id="redrawPct" value="4" />
+
+        <label>1st Ring Reduction (%)</label>
+        <input type="number" step="0.1" id="ring1Pct" value="25" />
+
+        <label>2nd Ring Reduction (%)</label>
+        <input type="number" step="0.1" id="ring2Pct" value="25" />
+
+        <label>3rd Ring Reduction (%)</label>
+        <input type="number" step="0.1" id="ring3Pct" value="40" />
+
         <button onclick="calculate()">Calculate Progression</button>
 
         <div class="results" id="results" style="display:none;">
@@ -32,10 +44,9 @@
         </div>
 
         <footer>
-            Draw & Ironing (D&I) calculation – Made by Shahzad Fareed
+            Draw & Ironing (D&I) calculation – Educational / Process reference<br />
         </footer>
     </div>
-
 
     <script src="app.js"></script>
 </body>
