name is added in html file in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <footer>
-            Draw & Ironing (D&I) calculation – Educational / Process reference<br />
+            Draw & Ironing (D&I) calculation – Made by Shahzad Fareed<br />
         </footer>
     </div>
 
