--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <footer>
-            Draw & Ironing (D&I) calculation – Made by Shahzad Fareed<br />
+            Draw & Ironing (D&I) calculation <br /> Developed by Shahzad Fareed
         </footer>
     </div>
 
