percentage limit is added in labels

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <label>Cup Wall Thickness Increase Rate</label>
         <input type="number" step="0.01" id="increaseRate" value="1.1" />
 
-        <label>Redraw Reduction (%)</label>
+        <label>Redraw Reduction 3-5 (%)</label>
         <input type="number" step="0.1" id="redrawPct" value="4" />
 
-        <label>1st Ring Reduction (%)</label>
+        <label>1st Ring Reduction 24-27 (%)</label>
         <input type="number" step="0.1" id="ring1Pct" value="25" />
 
-        <label>2nd Ring Reduction (%)</label>
+        <label>2nd Ring Reduction 24-27 (%)</label>
         <input type="number" step="0.1" id="ring2Pct" value="25" />
 
-        <label>3rd Ring Reduction (%)</label>
+        <label>3rd Ring Reduction 38-41 (%)</label>
         <input type="number" step="0.1" id="ring3Pct" value="40" />
 
         <button onclick="calculate()">Calculate Progression</button>
